FIX: Trip type value not showing in Delete Ride View

--- a/CaronasMVCWebApp/wwwroot/css/site.css
+++ b/CaronasMVCWebApp/wwwroot/css/site.css
@@ -3,6 +3,9 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 0px;
     padding-bottom: 20px;
+    background-image: url(../Images/background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* Wrapping element */
